[package]
name = "bevy_fsm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Observer-driven finite state machine framework for Bevy ECS with variant-specific events and flexible validation"
repository = "https://github.com/ffmulks/bevy_fsm"
authors = ["Dr. Florian Mulks <dr@mulks.ac>"]
keywords = ["bevy", "fsm", "state-machine", "ecs", "gamedev"]
categories = ["game-development"]
readme = "README.md"
homepage = "https://github.com/ffmulks/bevy_fsm"
documentation = "https://docs.rs/bevy_fsm"

[dependencies]
bevy = { version = "0.16", default-features = false }
bevy_enum_event = { git = "https://github.com/ffmulks/bevy_enum_event", branch = "main", features = [
    "fsm",
] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
