[workspace]
resolver = "2"
members = ["bevy_fsm_macros"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ffmulks/bevy_fsm"
authors = ["Dr. Florian Mulks <dr@mulks.ac>"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
bevy_enum_event = "0.1"
syn = { version = "2.0.107", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[package]
name = "bevy_fsm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observer-driven finite state machine framework for Bevy ECS with variant-specific events and flexible validation"
repository.workspace = true
authors.workspace = true
keywords = ["bevy", "fsm", "state-machine", "ecs", "gamedev"]
categories = ["game-development"]
readme = "README.md"
homepage = "https://github.com/ffmulks/bevy_fsm"
documentation = "https://docs.rs/bevy_fsm"

[dependencies]
bevy.workspace = true
bevy_enum_event.workspace = true
bevy_fsm_macros = { version = "0.1.0", path = "bevy_fsm_macros" }
